<resources>
    <string name="nombre_app">Factura Móvil</string>
    <string name="numero_proyecto">721380486862</string>
    <string name="bienvenido">FacturaMovil</string>
    <string name="boton_iniciar_sesion_persona">Persona</string>
    <string name="boton_iniciar_sesion_empresa">Empresa</string>
    <string name="sugerencia_nombre_usuario">Nombre de Usuario</string>
    <string name="sugerencia_clave">Contraseña</string>
    <string name="boton_iniciar_sesion">Iniciar sesión</string>
    <string name="boton_recuperar_clave">Recuperar contraseña</string>
    <string name="boton_iniciar_sesion_corto">Iniciar</string>
    <string name="error_nombre_usuario_invalido">El correo ingresado es inválido.</string>
    <string name="error_clave_invalida">Debe ingresar su clave.</string>
    <string name="error_clave_incorrecta">La clave es incorrecta.</string>
    <string name="error_campo_requerido">Este campo es requerido.</string>
    <string name="titulo_navigation_drawer">Factura Móvil</string>
    <string name="titulo_edicion_perfil">Perfil</string>
    <string name="titulo_factura_electronica">Factura</string>
    <string name="titulo_repositorio">Repositorio</string>
    <string name="titulo_informacion_emisor">Información Emisor</string>
    <string name="titulo_establecimiento_seleccionado">Establecimiento actual</string>
    <string name="titulo_mensaje_error_establecimiento_noseleccionado">Debe seleccionar el establecimiento.</string>
    <string name="titulo_establecimientos">Establecimientos</string>
    <string name="boton_establecimiento">Establecimiento</string>
    <string name="sugerencia_codigo_establecimiento">Código de establecimiento</string>
    <string name="sugerencia_punto_emision">Punto de emisión</string>
    <string name="sugerencia_direccion_establecimiento">Dirección de establecimiento</string>
    <string name="titulo_nuevo_establecimiento">Nuevo establecimiento</string>
    <string name="sugerencia_nombre">Nombres</string>
    <string name="sugerencia_apellido">Apellidos</string>
    <string name="sugerencia_correo_principal">Correo electrónico principal</string>
    <string name="sugerencia_correo_adicional">Correo electrónico adicional</string>
    <string name="sugerencia_telefono_principal">Teléfono principal</string>
    <string name="sugerencia_telefono_adicional">Teléfono adicional</string>
    <string name="boton_actualizar_perfil">Actualizar información</string>
    <string name="boton_cambiar_contrasenia">Cambiar contraseña</string>
    <string name="sugerencia_contrasenia_actual">Contraseña actual</string>
    <string name="sugerencia_contrasenia_nueva">Contraseña nueva</string>
    <string name="sugerencia_razon_social">Razón social</string>
    <string name="sugerencia_nombre_comercial">Nombre comercial</string>
    <string name="sugerencia_direccion_empresa">Dirección matríz</string>
    <string name="etiqueta_obligado_llevar_contabilidad">Obligado a llevar contabilidad</string>
    <string name="sugerencia_numero_resolucion">Número de resolución</string>
    <string name="boton_actualizar_informacion_empresa">Actualizar información</string>
    <string name="boton_actualizar_contrasenia_empresa">Actualizar contraseña</string>
    <string name="etiqueta_boton_siguiente">Continuar</string>
    <string name="etiqueta_boton_siguiente_componente">Continuar</string>
    <string name="etiqueta_boton_cancelar_aceptar">Aceptar</string>
    <string name="etiqueta_boton_agregar">Agregar</string>
    <string name="etiqueta_boton_seleccionar">Seleccionar</string>
    <string name="etiqueta_boton_nuevo">Nuevo</string>
    <string name="etiqueta_boton_actualizar">Actualizar</string>
    <string name="etiqueta_boton_cancelar_componente">Cancelar</string>
    <string name="etiqueta_boton_aplicar">Aplicar</string>
    <string name="etiqueta_boton_valor_nodefinido">No definido</string>
    <string name="etiqueta_valor_noseleccionado">No seleccionado</string>
    <string name="etiqueta_valor_noverificado">No verificado:</string>
    <string name="etiqueta_valor_pendiente">Información pendiente:</string>
    <string name="etiqueta_fecha_vacia">dd/MM/yyyy</string>
    <string name="etiqueta_detalle_vacio">No existen detalles.</string>
    <string name="etiqueta_no_existe_informacion">No existe información.</string>
    <string name="etiqueta_no_existen_registros">No existen registros.</string>
    <string name="etiqueta_total">Total:</string>
    <string name="titulo_informacion_factura">Información Factura</string>
    <string name="sugerencia_busqueda_cliente">Búsqueda</string>
    <string name="boton_cliente">Cliente</string>
    <string name="titulo_administracion_clientes">Administración de clientes</string>
    <string name="titulo_cliente">Búsqueda de cliente</string>
    <string name="sugerencia_identificacion_cliente">Identificación</string>
    <string name="sugerencia_nombres">Nombres</string>
    <string name="sugerencia_apellidos">Apellidos</string>
    <string name="sugerencia_razon_social_cliente">Razón social/Nombre</string>
    <string name="sugerencia_direccion_cliente">Dirección</string>
    <string name="sugerencia_correo_cliente">Correo electrónico</string>
    <string name="sugerencia_telefono_cliente">Teléfono</string>
    <string name="boton_actualizar_cliente">Actualizar</string>
    <string name="boton_correos_adicionales">Correos adicionales</string>
    <string name="boton_nuevo_cliente">Nuevo</string>
    <string name="boton_guardar_cliente">Guardar</string>
    <string name="titulo_nuevo_cliente">Nuevo cliente</string>
    <string name="titulo_actualizar_cliente">Actualizar cliente</string>
    <string name="titulo_correos_adicionales_cliente">Correos adicionales</string>
    <string name="titulo_cliente_seleccionado">Cliente:</string>
    <string name="etiqueta_estado_cliente">Estado</string>
    <string name="boton_producto">Producto</string>
    <string name="sugerencia_busqueda_producto">Búsqueda por codigoPrincipal/descripción</string>
    <string name="boton_nuevo_producto">Nuevo</string>
    <string name="titulo_producto">Búsqueda de producto</string>
    <string name="titulo_administracion_productos">Administración de productos</string>
    <string name="titulo_actualizar_producto">Actualizar producto</string>
    <string name="sugerencia_codigo_principal_producto">Código principal</string>
    <string name="sugerencia_codigo_auxiliar_producto">Código auxiliar</string>
    <string name="sugerencia_descripcion_producto">Descripción</string>
    <string name="sugerencia_precio_unitario_producto">Precio unitario</string>
    <string name="boton_guardar_producto">Guardar</string>
    <string name="titulo_nuevo_producto">Nuevo producto</string>
    <string name="titulo_detalle">Detalle factura</string>
    <string name="titulo_codigo_principal">Código principal</string>
    <string name="titulo_descripcion">Descripción</string>
    <string name="titulo_cantidad">Cantidad</string>
    <string name="titulo_precio_unitario">Precio unitario</string>
    <string name="sugerencia_descuento">Descuento</string>
    <string name="etiqueta_precio_total">Precio total</string>
    <string name="boton_agregar_detalle">Agregar detalle</string>
    <string name="etiqueta_detalles_factura">Detalles de la factura</string>
    <string name="titulo_impuesto">Impuestos</string>
    <string name="etiqueta_tipo_impuesto">Tipos de impuestos:</string>
    <string name="etiqueta_tarifa_impuesto">Tarifas de impuestos:</string>
    <string name="etiqueta_seleccione_impuesto">Seleccione el tipo de impuesto:</string>
    <string name="etiqueta_seleccione_tarifa_impuesto">Seleccione la tarifa del impuesto:</string>
    <string name="etiqueta_forma_pago">Forma de pago</string>
    <string name="etiqueta_total_forma_pago">Total</string>
    <string name="etiqueta_plazo_forma_pago">Plazo</string>
    <string name="etiqueta_unidad_tiempo_forma_pago">Unidad tiempo</string>
    <string name="titulo_formas_pago">Formas de pago</string>
    <string name="sugerencia_base_imponible_ice">Base imponible</string>
    <string name="sugerencia_porcentaje_ice">Porcentaje</string>
    <string name="etiqueta_valor_ice">Valor</string>
    <string name="etiqueta_cabecera_impuestos_codigo">Código</string>
    <string name="etiqueta_cabecera_impuestos_codigo_porcentaje">Código porcentaje</string>
    <string name="etiqueta_cabecera_impuestos_base_imponible">Base imponible</string>
    <string name="etiqueta_cabecera_impuestos_tarifa">Tarifa</string>
    <string name="etiqueta_cabecera_impuestos_valor">Valor</string>
    <string name="boton_agregar_impuesto">Agregar impuesto</string>
    <string-array name="impuestos">
        <item>RENTA</item>
        <item>IVA</item>
        <item>ICE</item>
        <item>IRBPNR</item>
        <item>ISD</item>
    </string-array>
    <string name="etiqueta_nombre_detalle_adicional">Nombre</string>
    <string name="etiqueta_valor_detalle_adicional">Valor</string>
    <string name="titulo_detalle_adicional">Detalles adicionales</string>
    <string name="boton_agregar_detalle_adicional">Agregar detalle adicional</string>
    <string name="titulo_informacion_adicional">Información Adicional</string>
    <string name="boton_agregar_informacion_adicional">Agregar información adicional</string>
    <string name="titulo_informacion_adicional_cliente">Agregar información del cliente</string>
    <string name="etiqueta_informacion_adicional_personal_cliente">Correo electrónico principal,teléfono</string>
    <string name="etiqueta_correos_adicionales_cliente">Correos adicionales</string>
    <string name="descripcion_imagen_pdf_ride">Imagen para PDF RIDE</string>
    <string name="descripcion_imagen_xml">Imagen para XML</string>
    <string name="descripcion_imagen_componentes_factura">Imagen OK/KO componentes de factura</string>
    <string name="titulo_componente_factura_electronica_obligatorios">Obligatorios</string>
    <string name="titulo_componente_factura_electronica_opcional">Opcionales</string>
    <string name="titulo_resumen_impuestos_factura">Resumen impuestos</string>
    <string name="titulo_resumen_comprobante_electronico">Resumen comprobante electrónico</string>
    <string name="titulo_firma_autorizacion_sri">Firma y Autorización</string>
    <string name="valor_cero">0.00</string>
    <string name="valor_vacio">Vacío</string>
    <string name="ambiente">1</string>
    <string name="tipo_emision">1</string>
    <string name="moneda">DOLAR</string>
    <string name="etiqueta_numero_comprobante">Número:</string>
    <string name="etiqueta_emisor_comprobante">Emisor:</string>
    <string name="etiqueta_receptor_comprobante">Receptor:</string>
    <string name="etiqueta_detalles_comprobante">Detalles:</string>
    <string name="etiqueta_informacion_adicional_comprobante">Información adicional:</string>
    <string name="etiqueta_forma_pago_factura">Forma pago:</string>
    <string name="etiqueta_subtototal_12">Subtotal 12%:</string>
    <string name="etiqueta_subtototal_14">Subtotal 14%:</string>
    <string name="sugerencia_correo_electronico_recepcion">Para:</string>
    <string name="sugerencia_asunto_correo_electronico">Asunto:</string>
    <string name="sugerencia_contenido_correo_electronico">Contenido:</string>
    <string name="radio_button_tipo_cliente1">CLIENTE</string>
    <string name="radio_button_tipo_cliente2">PROVEEDOR</string>
    <string name="opcion_editar_cliente">Editar cliente</string>
    <string name="opcion_llamar_cliente">Llamar cliente</string>
    <string name="opcion_enviar_correo_cliente">Enviar correo</string>
    <string name="opcion_compartir_cliente">Compartir</string>
    <string name="opcion_mas_info_comprobante">Ver detalles comprobante</string>
    <string name="opcion_compartir_comprobante">Compartir comprobante</string>
    <string name="opcion_guardar_comprobante">Descargar comprobante</string>
    <string name="opcion_reenviar_comprobante">Reenviar comprobante</string>
</resources>