<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".recyclerview.AdministracionClientesActividad">
    <item
        android:id="@+id/item_informacion_comprobante"
        android:title="@string/opcion_mas_info_comprobante"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_reenviar_comprobante"
        android:title="@string/opcion_reenviar_comprobante"
        android:icon="@drawable/ic_send_black_48dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_guardar_comprobante"
        android:title="@string/opcion_guardar_comprobante"
        android:icon="@drawable/ic_file_download_black_48dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_compartir_comprobante"
        android:title="@string/opcion_compartir_comprobante"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="ifRoom" />
</menu>