<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_cabecera_impuestos_codigo"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:layout_weight="1" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_cabecera_impuestos_codigo_porcentaje"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:layout_weight="1" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_cabecera_impuestos_base_imponible"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:layout_weight="1" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/etiqueta_cabecera_impuestos_tarifa"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:layout_weight="1" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/etiqueta_cabecera_impuestos_valor"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:layout_weight="1" />


</LinearLayout>