<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_cabecera_codigo_impuesto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_cabecera_impuestos_codigo"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:paddingRight="20dp"
        android:layout_weight="1"
        android:gravity="center" />

    <TextView
        android:id="@+id/text_view_cabecera_codigo_porcentaje_impuesto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_cabecera_impuestos_codigo_porcentaje"

        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:paddingRight="20dp"
        android:layout_weight="1"
        android:gravity="center" />

    <TextView
        android:id="@+id/text_view_cabecera_base_imponible_impuesto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_cabecera_impuestos_base_imponible"

        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:paddingRight="20dp"
        android:layout_weight="1"
        android:gravity="center" />

    <TextView
        android:id="@+id/text_view_cabecera_tarifa_impuesto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_cabecera_impuestos_tarifa"

        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:paddingRight="20dp"
        android:layout_weight="1"
        android:gravity="center" />

    <TextView
        android:id="@+id/text_view_cabecera_valor_impuesto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_cabecera_impuestos_valor"

        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:paddingRight="20dp"
        android:layout_weight="1"
        android:gravity="center" />


</LinearLayout>