<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/text_view_cabecera_forma_pago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_forma_pago"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:paddingRight="10dp"
        android:layout_weight="1"
        android:gravity="center" />

    <TextView
        android:id="@+id/text_view_cabecera_total_forma_pago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_total_forma_pago"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:paddingRight="10dp"
        android:layout_weight="1"
        android:gravity="center" />

    <TextView
        android:id="@+id/text_view_cabecera_plazo_forma_pago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_plazo_forma_pago"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:paddingRight="10dp"
        android:layout_weight="1"
        android:gravity="center" />

    <TextView
        android:id="@+id/text_view_cabecera_unidad_tiempo_forma_pago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_unidad_tiempo_forma_pago"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:paddingRight="10dp"
        android:layout_weight="1"
        android:gravity="center" />
</LinearLayout>