<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">


    <TextView
        android:id="@+id/text_view_codigo_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_codigo_principal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/text_view_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_descripcion"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"

        android:layout_weight="1" />

    <TextView
        android:id="@+id/text_view_cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_cantidad"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/text_view_precio_unitario"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/titulo_precio_unitario"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:layout_weight="1" />


</LinearLayout>